--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
       rel="shortcut icon"
       href="%PUBLIC_URL%/assets/favicon/favicon.ico?v=47B68lwkB7"
     />
-    <meta name="apple-mobile-web-app-title" content="Realstate map" />
-    <meta name="application-name" content="Realstate map" />
-    <meta name="msapplication-TileColor" content="#00a8ff" />
+    <meta name="apple-mobile-web-app-title" content="MAP LUV MetaVerse" />
+    <meta name="application-name" content="MAP LUV MetaVerse" />
+    <meta name="msapplication-TileColor" content="#00FFA3" />
     <meta
       name="msapplication-config"
       content="%PUBLIC_URL%/assets/favicon/browserconfig.xml?v=47B68lwkB7"
     />
-    <meta name="theme-color" content="#00a8ff" />
+    <meta name="theme-color" content="#00FFA3" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
