--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Realstate map</title>
-    <meta name="description" content="Reactive realstate map with React." />
+    <title>LUV MetaVerse Map</title>
+    <meta name="description" content="5D LUVRS 40 Acres of virtual real estate." />
 
     <link
       rel="apple-touch-icon"
@@ -36,8 +36,8 @@
       rel="shortcut icon"
       href="%PUBLIC_URL%/assets/favicon/favicon.ico?v=47B68lwkB7"
     />
-    <meta name="apple-mobile-web-app-title" content="MAP LUV MetaVerse" />
-    <meta name="application-name" content="MAP LUV MetaVerse" />
+    <meta name="apple-mobile-web-app-title" content="LUV MetaVerse Map" />
+    <meta name="application-name" content="LUV MetaVerse Map" />
     <meta name="msapplication-TileColor" content="#00FFA3" />
     <meta
       name="msapplication-config"
