--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Realstate map</title>
+    <title>LUV METAVERSE MAP</title>
     <meta name="description" content="Reactive realstate map with React." />
 
     <link
